[package]
name = "treap_non_random"
version = "0.1.0-alpha.2"
edition = "2021"
license = "BSD-2-Clause"
description = "A non-randomized Treap implementation. Not very useful as a balanced tree, but useful when implementing CVM or similar algorithms."
repository="https://github.com/apanda/cvm"
authors = ["Aurojit Panda <apanda@cs.nyu.edu>"]

[dependencies]
